--- a/react-use-cdn/index.html
+++ b/react-use-cdn/index.html
@@ -20,7 +20,7 @@
   <script type="text/babel" src="./vd_05/app.js"></script>
   <script type="text/babel" src="./vd_06/app.js"></script> -->
   <!-- <script type="text/babel" src="./vd_07/app.js"></script> -->
-  <script type="text/babel" src="./vd_08/app.js"></script>
+  <!-- <script type="text/babel" src="./vd_07/app.js"></script> -->
   <script type="text/babel" src="./vd_08/main.js"></script>
   
   
